plugins {
    id 'com.gradleup.shadow' version '9.2.2'
    id 'org.jetbrains.kotlin.jvm' version '2.2.20'
    id 'java'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.sidpatchy.clairebot.Main',
                'Multi-Release': 'true'
        )
    }
}

group = 'com.sidpatchy'
version = '3.4.0-alpha.7'

processResources {
    filesMatching('**/build.properties') {
        expand(
                version: project.version,
                buildDate: new Date().format("yyyy-MM-dd HH:mm:ss")
        )
    }
}

kotlin {
    jvmToolchain(25)
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url = 'https://m2.dv8tion.net/releases' }
    maven { url = 'https://jitpack.io' }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.0'

    implementation 'com.github.Sidpatchy:Robin:2.2.5'

    implementation 'org.javacord:javacord:3.8.0'

    implementation 'org.apache.logging.log4j:log4j-api:2.25.2'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.2'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.25.2'
    implementation 'org.apache.commons:commons-lang3:3.19.0'

//    implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.2.20' TODO this can be considered for re-addition once JDK 25 support is added

    implementation 'org.json:json:20250517'
    implementation 'tools.jackson.dataformat:jackson-dataformat-xml:3.0.0'
    implementation 'tools.jackson.dataformat:jackson-dataformat-yaml:3.0.0'

}

test {
    useJUnitPlatform()
}